--- a/PersonProject/PersonProject.csproj
+++ b/PersonProject/PersonProject.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DD30380F-F317-48C5-A349-5C0C0D4FCD8C}</ProjectGuid>
+    <ProjectGuid>{F94A4E93-21DD-4B5C-B8B1-31FC5795CFE3}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Week05_01</RootNamespace>
-    <AssemblyName>Week05-01</AssemblyName>
+    <RootNamespace>PersonProject</RootNamespace>
+    <AssemblyName>PersonProject</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,18 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Card.cs" />
-    <Compile Include="Deck.cs" />
-    <Compile Include="Faces.cs" />
-    <Compile Include="PlayerStates.cs" />
+    <Compile Include="DomesticStudents.cs" />
+    <Compile Include="InternationalStudents.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SceneStates.cs" />
-    <Compile Include="Suits.cs" />
+    <Compile Include="Student.cs" />
+    <Compile Include="Teacher.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Lesson05ClassDiagram.cd" />
+    <None Include="PersonClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
